--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 🎯 Dota Plus на месяц первому прошедшему
             </div>
             <strong>Управление:</strong> Стрелки или WASD<br>
-            🏆 Цель: 200 очков и все четыре уровня<br>
+            🏆 Цель: 250 очков и все пять уровней<br>
             🔄 Новые препятствия каждые 50 очков<br>
             <strong>R</strong>, <strong>Enter</strong> - перезапуск после Game Over
         </div>
