--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <div class="controls">
             <div style="font-size: 1.1rem; font-weight: 600; margin-bottom: 1rem; color: #fff7ea;">
-                🎯 Dota Plus на месяц первому прошедшему
+                Первый лейм на районе получает месяц строгоча
             </div>
             <strong>Управление:</strong> Стрелки или WASD<br>
             🏆 Цель: 250 очков и все пять уровней<br>
