--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
             </div>
             <strong>Управление:</strong> Стрелки или WASD<br>
             🏆 Цель: 250 очков и все пять уровней<br>
-            🔄 Новые препятствия каждые 50 очков<br>
+            🔄 Новые препятствия каждые 50 очков (нематериальные на 10 ходов)<br>
+            💡 Нематериальные структуры полупрозрачны и не убивают змейку<br>
             <strong>R</strong>, <strong>Enter</strong> - перезапуск после Game Over
+            <br><br>
+            <a href="structure_launcher.html" style="display: inline-block; padding: 8px 16px; background: rgba(255, 255, 255, 0.2); color: white; text-decoration: none; border-radius: 6px; margin-top: 10px;">🚀 Выбрать другую структуру</a>
         </div>
         
         <div class="game-over" id="gameOver">
