--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <canvas id="gameCanvas" width="400" height="400"></canvas>
         
         <div class="controls">
-            <div style="font-size: 1.1rem; font-weight: 600; margin-bottom: 1rem; color: #fff7ea;">
-                Первый лейм на районе получает месяц строгоча
-            </div>
-            <strong>Управление:</strong> Стрелки или WASD<br>
+            <strong>Управление:</strong><br>
+            <span class="desktop-controls">Стрелки или WASD<br></span>
+            <span class="mobile-controls">Свайпы по игровому полю<br></span>
             🏆 Цель: 250 очков и все пять уровней<br>
             🔄 Новые препятствия каждые 50 очков<br>
-            <strong>R</strong>, <strong>Enter</strong> - перезапуск после Game Over
+            <span class="desktop-controls"><strong>R</strong>, <strong>Enter</strong> - перезапуск после Game Over</span>
+            <span class="mobile-controls"><strong>Нажмите кнопку</strong> - перезапуск после Game Over</span>
         </div>
         
         <div class="game-over" id="gameOver">
