--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             
-            <canvas id="gameCanvas" width="400" height="400"></canvas>
+            <canvas id="gameCanvas"></canvas>
         </div>
         
         <div class="game-right">
