Improve mobile swipe controls

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="controls">
                 <strong>Управление:</strong><br>
                 <span class="desktop-controls">Стрелки или WASD<br></span>
-                <span class="mobile-controls">Свайпы по игровому полю<br></span>
+                <span class="mobile-controls">Ведите пальцем по игровому полю без отрыва<br></span>
                 🏆 Цель: 250 очков и все пять уровней<br>
                 🔄 Новые препятствия каждые 50 очков<br>
                 <span class="desktop-controls"><strong>R</strong>, <strong>Enter</strong> - перезапуск после Game Over</span>
